sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:12: error: not found: value j
  swap(m,j)
         ^